# maxhidapi

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md
Package/: package-info.json
Package/help/: hidapi.maxhelp
Package/hidapi/docs/refpages/: hidapi.maxref.xml
Package/hidapi/help/: hidapi.maxhelp
libs/max/: README.md
src/: maxhidapi.c
